[bugfix] Fix profile card display issues on smaller screens w/responsive query (#696)
* add responsive media query to profile css

* break username on all screen sizes if necessary

* embed avatar inside header on smaller screen sizes

* align items to the left in small screen view

* more consistent profile scaling accross firefox and chrome

* simplify things a little bit

* make sure bio fits in profile

* word-break content if necessary

--- a/web/source/css/base.css
+++ b/web/source/css/base.css
@@ -50,9 +50,7 @@ body {
 	min-height: 100%;
 	min-width: 100%;
 
-	grid-template-columns: 1fr 50% 1fr;
 	grid-template-columns: auto min(92%, 90ch) auto;
-
 	grid-template-rows: auto 1fr auto;
 }
 
@@ -269,10 +267,6 @@ footer {
 }
 
 @media screen and (orientation: portrait) {
-	.page {
-		grid-template-columns: 1fr 92% 1fr;
-	}
-
 	header {
 		text-align: center;
 	}
